chore(sourcecode): refactor code
- remove unnecessary  comments
- adhere to eslint airbnb rules
- code response message should be self explanatory
- all users can create and message group
- improve validation checking
- update swagger ui

[Chore #164819791]
